objects/ConfigureORFField__mdt.object
<CustomObject>
    <fields>
        <fullName>APIName__c</fullName>
        <label>APIName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalMandatorySimpleORF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Mandatory Simple ORF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GloballyMandatoryStandardORF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Globally Mandatory Standard ORF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Configure ORF Field</label>
    <pluralLabel>Configure ORF Fields</pluralLabel>
</CustomObject>